--- a/AgenceLivingRoom/AndroidManifest.xml
+++ b/AgenceLivingRoom/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -40,6 +40,16 @@
                 
         <activity
             android:name="SettingsActivity"
+            android:parentActivityName=".HomeActivity" 
+            >
+            <!-- Parent activity meta-data to support API level 7+ -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+        
+        <activity
+            android:name="InfosActivity"
             android:parentActivityName=".HomeActivity" 
             >
             <!-- Parent activity meta-data to support API level 7+ -->
