--- a/AgenceLivingRoom/AndroidManifest.xml
+++ b/AgenceLivingRoom/AndroidManifest.xml
@@ -9,19 +9,22 @@
         android:targetSdkVersion="21" />
     
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:logo="@drawable/logo" android:description="@string/description"
+        android:description="@string/description"
+        android:theme="@style/AppTheme.Light"
         >
         <!-- android:uiOptions="splitActionBarWhenNarrow" --> 
         
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light">
+            android:label="@string/app_name" > 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -76,6 +79,25 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".FindReferenceActivity" />
+        </activity>
+        
+        <activity
+            android:name="ReferenceDescriptionActivity"
+            android:parentActivityName=".ReferenceListActivity" 
+            >
+            <!-- Parent activity meta-data to support API level 7+ -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ReferenceListActivity" />
+        </activity>
+        
+        <activity 
+            android:name="CollectionGalleryActivity" 
+            android:label="@string/collectionGallery" 
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ReferenceListActivity" />
         </activity>
         
     </application>
